Kubes/Traefik/traefik-dns.yml
---
apiVersion: v1
kind: Service
metadata:
  name: traefik-web-ui
  namespace: kube-system
spec:
  selector:
    k8s-app: traefik-ingress-lb
  ports:
  - name: web # criação da app web
    port: 80
    targetPort: 8080

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: traefik-web-ui
  namespace: kube-system
spec:
  rules:
  - host: traefik.rancher.vicentini.dev.br # registro de DNS
    http:
      paths:
      - path: /
        backend:
          serviceName: traefik-web-ui
          servicePort: web

# kubectl apply -f traefik-dns.yml
